--- a/jokeviewer/src/main/AndroidManifest.xml
+++ b/jokeviewer/src/main/AndroidManifest.xml
@@ -2,8 +2,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.keyeswest.jokeviewer">
 
-    <application>
-        <activity android:name=".MainActivity"></activity>
+    <application
+        android:theme="@style/AppTheme">
+
+
+        <activity android:name=".MainActivity">
+
+        </activity>
+
     </application>
 
 </manifest>
