--- a/jokeviewer/src/main/AndroidManifest.xml
+++ b/jokeviewer/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
         android:theme="@style/AppTheme">
 
 
-        <activity android:name=".MainActivity">
+        <activity android:name=".JokeViewerMainActivity">
 
         </activity>
 
