--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,6 @@ dependencies {
     })
 
     testImplementation 'junit:junit:4.12'
+
+    androidTestCompile 'com.android.support.test:runner:1.0.1'
 }
