Fixing deprecated task names

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,7 @@ android {
     }
 }
 
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     endpointsServer project(path: ':backend', configuration: 'endpoints')
@@ -64,5 +65,5 @@ dependencies {
 
     testImplementation 'junit:junit:4.12'
 
-    androidTestCompile 'com.android.support.test:runner:1.0.1'
+    androidTestImplementation 'com.android.support.test:runner:1.0.1'
 }
