--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,11 +59,14 @@ dependencies {
 
     implementation project(":jokeviewer")
 
-    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
+
 
     testImplementation 'junit:junit:4.12'
 
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    androidTestCompile 'com.android.support.test.espresso:espresso-contrib:3.0.1'
+    compile 'com.android.support.test.espresso:espresso-idling-resource:3.0.1'
+    // Force usage of dependencies in the test app, since it is internally used by the runner module.
+    androidTestCompile 'com.android.support:support-annotations:25.4.0'
 }
