--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -23,13 +23,22 @@ apply plugin: 'com.google.cloud.tools.endpoints-framework-server'
 sourceCompatibility = JavaVersion.VERSION_1_7
 targetCompatibility = JavaVersion.VERSION_1_7
 
-dependencies {
-    implementation 'com.google.endpoints:endpoints-framework:2.0.9'
-    implementation 'javax.inject:javax.inject:1'
+ext{
+    endpointsFramework = '2.0.9'
+    javaxInjectVersion = '1'
+    servletApi = '2.5'
+}
 
-    implementation 'javax.servlet:servlet-api:2.5'
-    implementation 'com.google.api-client:google-api-client:1.23.0'
-    implementation 'com.google.http-client:google-http-client-android:1.23.0'
+dependencies {
+
+    //Google Cloud Endpoints
+    implementation "com.google.endpoints:endpoints-framework:$endpointsFramework"
+
+    implementation "javax.inject:javax.inject:$javaxInjectVersion"
+    implementation "javax.servlet:servlet-api:$servletApi"
+
+    implementation "com.google.api-client:google-api-client:$rootProject.googleApiClient"
+    implementation "com.google.http-client:google-http-client-android:$rootProject.googleApiClient"
 
     implementation project(":jokeLib")
 }
